Branding, Phase and Step pages, Components

--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -5,7 +5,13 @@
 	<![endif]-->
 
 	@@include('modules/_nav.html')
+	
+	<section class="content">
 
-	<p>It's alive!</p>
+		index
+		
+	</section>
+	<!-- /.content -->
+
 
 @@include('modules/_footer.html')
