--- a/src/modules/_header.html
+++ b/src/modules/_header.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>Project - Client</title>
+	<title>JIVE Community | ORACLE</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
@@ -13,6 +13,7 @@
 
 	<!-- styles / fonts -->
 	<link rel="stylesheet" href="style.css">
+	<script src="https://use.fontawesome.com/f0f0aa36b2.js"></script>
 	
 </head>
 <body>
