--- a/src/modules/_nav.html
+++ b/src/modules/_nav.html
@@ -1,7 +1,72 @@
-<nav>
-	<ul>
-		<li><a href="#">Nav link 1</a></li>
-		<li><a href="#">Nav link 2</a></li>
-		<li><a href="#">Nav link 3</a></li>
+<nav class="nav-main">
+	<ul id="menu-accordion" class="menu-nav list-unstyled">
+		<li class="menu-item">
+			<a href="index.html">
+				<span class="menu-item-indicator"><i class="icon fa fa-home"></i></span><span class="menu-item-title">Home</span>
+			</a>
+		</li>
+		<li class="menu-item active">
+			<a href="page-phase.html" aria-expanded="true">
+				<span class="menu-item-indicator">1</span><span class="menu-item-title">Phase 1: Activate</span>
+			</a>
+			<ol id="collapsePhaseOne" class="submenu-nav collapse in">
+				<li class="submenu-item active"><a href="page-step.html">Kick Off Planning Session</a></li>
+				<li class="submenu-item"><a href="#">Attend Cloud Onboarding Session</a></li>
+				<li class="submenu-item"><a href="#">Finalize Business Plan</a></li>
+				<li class="submenu-item"><a href="#">Decide FSO/Packaged Solutions Model And Target Function</a></li>
+				<li class="submenu-item"><a href="#">Finalize Team Structure And Assign Roles &amp; Resp.</a></li>
+				<li class="submenu-item"><a href="#">Finalize Training Plan</a></li>
+				<li class="submenu-item"><a href="#">Conduct Activate Readiness Checkpoint Review</a></li>
+			</ol>
+		</li>
+		<li class="menu-item">
+			<a href="page-phase.html" aria-expanded="false" class="collapsed">
+				<span class="menu-item-indicator">2</span><span class="menu-item-title">Phase 2: Enable</span>
+			</a>
+			<ol start="8" id="collapsePhaseTwo" class="submenu-nav collapse">
+				<li class="submenu-item">Register For Implementation Workshops</li>
+				<li class="submenu-item">Attend Online Recordings</li>
+				<li class="submenu-item">Attend Workshops and Bootcamps</li>
+				<li class="submenu-item">Request Access to Demo Platform</li>
+				<li class="submenu-item">Cloud Consulting Workshop</li>
+				<li class="submenu-item">Cloud Methodology Workshop</li>
+				<li class="submenu-item">SaaS Impl.Best Practices</li>
+				<li class="submenu-item">Enablement Readiness Review</li>
+				<li class="submenu-item">Oracle Cloud Implementation Success &amp; Training On Demand</li>
+				<li class="submenu-item">Oracle Cloud Implementation Success &amp; My Oracle Support</li>
+				<li class="submenu-item">Oracle Cloud Implementation Success &amp; Useful Sites</li>
+				<li class="submenu-item">Build a first version of Packaged Solution / FSO</li>
+				<li class="submenu-item">Review and update the Packaged Solution / FSO</li>
+				<li class="submenu-item">Agree on a final version of Packaged Solution / FSO</li>
+				<li class="submenu-item">Sit Implementation Exams</li>
+				<li class="submenu-item">Delivery Readiness Review</li>
+			</ol>
+		</li>
+		<li class="menu-item">
+			<a data-toggle="collapse" data-parent="#menu-accordion" href="page-phase.html" aria-expanded="false" class="collapsed">
+				<span class="menu-item-indicator">3</span><span class="menu-item-title">Phase 3: Implement</span>
+			</a>
+			<ol start="24" id="collapsePhaseThree" class="submenu-nav collapse">
+				<li class="submenu-item">SaaS - Go To Market Material</li>
+				<li class="submenu-item">Support Partner In First Project</li>
+				<li class="submenu-item">Sit Implementation Exams</li>
+				<li class="submenu-item">Conduct Success Readiness Checkpoint Review</li>
+			</ol>
+		</li>
+		<li class="menu-item">
+			<a data-toggle="collapse" data-parent="#menu-accordion" href="page-phase.html" aria-expanded="false" class="collapsed">
+				<span class="menu-item-indicator">4</span><span class="menu-item-title">Phase 4: Handover</span>
+			</a>
+			<ol start="28" id="collapsePhaseFour" class="submenu-nav collapse">
+				<li class="submenu-item">Specialization</li>
+				<li class="submenu-item">Customer Success</li>
+				<li class="submenu-item">Partner Recognition</li>
+			</ol>
+		</li>
+		<li class="menu-item">
+			<a href="page-components.html">
+				<span class="menu-item-indicator"><i class="icon fa fa-comments"></i></span><span class="menu-item-title">Oracle EMEA Partner Sales Community</span>
+			</a>
+		</li>
 	</ul>
 </nav>
