Responsive, Branded Phase steps and Single step

--- a/src/page-components.tpl.html
+++ b/src/page-components.tpl.html
@@ -3,23 +3,11 @@
 	<!--[if lt IE 8]>
 		<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 	<![endif]-->
-
+	
+	@@include('modules/_nav-tabs.html')
 	@@include('modules/_nav.html')
 
 	<div class="content">
-
-		<div class="dropdown">
-			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-				Phase 2: Enable
-				<span class="caret"></span>
-			</button>
-			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-				<li><a href="#">Phase 1: Activate</a></li>
-				<li class="active"><a href="#">Phase 2: Enable</a></li>
-				<li><a href="#">Phase 3: Implement</a></li>
-				<li><a href="#">Phase 4: Handover</a></li>
-			</ul>
-		</div>
 
 		<header class="page-header">
 			<h2 class="page-title">Components</h2>
