--- a/src/page-phase.tpl.html
+++ b/src/page-phase.tpl.html
@@ -4,32 +4,20 @@
 		<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 	<![endif]-->
 
+	@@include('modules/_nav-tabs.html')
 	@@include('modules/_nav.html')
 
 	<div class="content">
-
-		<div class="dropdown">
-			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-				Phase 2: Enable
-				<span class="caret"></span>
-			</button>
-			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-				<li><a href="#">Phase 1: Activate</a></li>
-				<li class="active"><a href="#">Phase 2: Enable</a></li>
-				<li><a href="#">Phase 3: Implement</a></li>
-				<li><a href="#">Phase 4: Handover</a></li>
-			</ul>
-		</div>
 
 		<header class="page-header">
 			<h2 class="page-title">Phase 2: Enable</h2>
 		</header>
 
-		<section class="page-intro">
-			<p class="lead">In this Enable Phase we will build on the Business Plan and detailed Training plan developed and agreed in the previous Activate Phase, to guide you to and through the Enable content in context.</p>
-			<p>The the detailed training Plan in hand review the Development Led Bootcamps and Register your People, Some Classes are not delivered by Development, these can be found in the Bootcamps Step followed by prerequsite and attend bootcamp support. You should also Register for our Demo Systems: All ASAP Partners have access to our Demo Systems where they can use the Environments there to Demo to Prospects and as Training Sanboxes. We also draw your attention here to non Product traing such as Cloud Consulting and Cloud Implementation Methodology training.</p>
-			<p>A key part of this Enablement is to prepare your Go-to-Market Packaged Offerings. Our Terminology is: FSO: Fixed Scope Offer. If you have already successfully implemented the Products in the FSO you can also progress immediately to request the FSO Approval. If not you will need to go onto the Implement Phase and request the FSO Approval at the end of that Phase after your successful implementation</p>
-			<p>In order to be Certified we encourage Consultants to sit the Implementation Exams when they are ready. If you feel you are ready with the Experience you already have then we recommend you follow this step here. If you choose to wait till you have more experience then you will be reminded in the next phase. For Management @ Partner Reading this, the certification achieved here differentiates Consultants and these passes are also required for your company to achieve company Specialization.</p>
+		<section class="page-intro row">
+			<p class="lead col-lg-12">In this Enable Phase we will build on the Business Plan and detailed Training plan developed and agreed in the previous Activate Phase, to guide you to and through the Enable content in context.</p>
+			<p class="col-lg-4">The the detailed training Plan in hand review the Development Led Bootcamps and Register your People, Some Classes are not delivered by Development, these can be found in the Bootcamps Step followed by prerequsite and attend bootcamp support. You should also Register for our Demo Systems: All ASAP Partners have access to our Demo Systems where they can use the Environments there to Demo to Prospects and as Training Sanboxes. We also draw your attention here to non Product traing such as Cloud Consulting and Cloud Implementation Methodology training.</p>
+			<p class="col-lg-4">A key part of this Enablement is to prepare your Go-to-Market Packaged Offerings. Our Terminology is: FSO: Fixed Scope Offer. If you have already successfully implemented the Products in the FSO you can also progress immediately to request the FSO Approval. If not you will need to go onto the Implement Phase and request the FSO Approval at the end of that Phase after your successful implementation</p>
+			<p class="col-lg-4">In order to be Certified we encourage Consultants to sit the Implementation Exams when they are ready. If you feel you are ready with the Experience you already have then we recommend you follow this step here. If you choose to wait till you have more experience then you will be reminded in the next phase. For Management @ Partner Reading this, the certification achieved here differentiates Consultants and these passes are also required for your company to achieve company Specialization.</p>
 		</section>
 		<!-- /.page-intro -->
 
@@ -39,15 +27,21 @@
 				<p class="lead section-title">Enable phase steps</p>
 			</header>
 
-			<ul class="phase-steps list-unstyled">
-				<li>01. Kick Off Planning Session</li>
-				<li>02. Attend Cloud Onboarding Session</li>
-				<li>03. Finalize Business Plan</li>
-				<li>04. Decide FSO/Packaged Solutions Model And Target Function</li>
-				<li>05. Finalize Team Structure And Assign Roles &amp; Resp.</li>
-				<li>06. Finalize Training Plan</li>
-				<li>07. Conduct Activate Readiness Checkpoint Review</li>
-			</ul>
+			<div class="phase-plan">
+
+				<h4 class="phase-steps-title">Saas digital community activate phase</h4>
+				<ul class="phase-steps list-unstyled">
+					<li><a href="#">01. Kick Off Planning Session</a></li>
+					<li><a href="#">02. Attend Cloud Onboarding Session</a></li>
+					<li><a href="#">03. Finalize Business Plan</a></li>
+					<li><a href="#">04. Decide FSO/Packaged Solutions Model And Target Function</a></li>
+					<li><a href="#">05. Finalize Team Structure And Assign Roles &amp; Resp.</a></li>
+					<li><a href="#">06. Finalize Training Plan</a></li>
+					<li><a href="#">07. Conduct Activate Readiness Checkpoint Review</a></li>
+				</ul>
+				
+			</div>
+			<!-- /.phase-plan -->
 
 		</section>
 		<!-- /.page-content -->
@@ -59,7 +53,7 @@
 				<p class="lead section-title">Featured Oracle Experts</p>
 			</header>
 
-			<ul class="coaches list-inline row">
+			<ul class="coaches list-unstyled row">
 				<li class="coach col-sm-4">
 					<a href="#">
 						<img src="https://community.oracle.com/resources/statics/5954567/Untitled-1_0012_Kate%2BLynskey.jpg?a=1476373925549" alt="Corry Weick" class="coach-img">
