--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -4,6 +4,7 @@
 		<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 	<![endif]-->
 
+	@@include('modules/_nav-tabs.html')
 	@@include('modules/_nav.html')
 	
 	<section class="content">
