--- a/src/page-step.tpl.html
+++ b/src/page-step.tpl.html
@@ -4,22 +4,10 @@
 		<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 	<![endif]-->
 
+	@@include('modules/_nav-tabs.html')
 	@@include('modules/_nav.html')
 
 	<div class="content">
-
-		<div class="dropdown">
-			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-				Phase 2: Enable
-				<span class="caret"></span>
-			</button>
-			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-				<li><a href="#">Phase 1: Activate</a></li>
-				<li class="active"><a href="#">Phase 2: Enable</a></li>
-				<li><a href="#">Phase 3: Implement</a></li>
-				<li><a href="#">Phase 4: Handover</a></li>
-			</ul>
-		</div>
 
 		<header class="page-header">
 			<h2 class="page-title">Register for Implementation Enablement Events</h2>
@@ -27,7 +15,7 @@
 
 		<section class="page-intro">
 			<div class="row">
-				<div class="col-md-8">
+				<div class="col-md-8 page-intro-presentation">
 					<h4 class="page-intro-title">
 						<span class="pull-left">Introduction &amp; Overview</span>
 						<small class="pull-right page-intro-download"><a href="#"><i class="icon fa fa-download"></i> Download PPT</a></small>
