--- a/src/modules/_header.html
+++ b/src/modules/_header.html
@@ -16,4 +16,4 @@
 	<script src="https://use.fontawesome.com/f0f0aa36b2.js"></script>
 	
 </head>
-<body class="menu-open">
+<body class="menu-open @@body-class">
