--- a/src/modules/_nav-tabs.html
+++ b/src/modules/_nav-tabs.html
@@ -1,11 +1,11 @@
 <nav class="nav-master">
 	<ul class="nav nav-tabs">
-		<li role="presentation"><a href="#"><i class="icon fa fa-home"></i> Home</a></li>
-		<li role="presentation" class="active"><a href="#"><i class="icon fa fa-cloud"></i> <span class="visible-lg-inline">Phase </span>1: Activate</a></li>
-		<li role="presentation"><a href="#"><i class="icon fa fa-cloud"></i> <span class="visible-lg-inline">Phase </span>2: Enable</a></li>
-		<li role="presentation"><a href="#"><i class="icon fa fa-cloud"></i> <span class="visible-lg-inline">Phase </span>3: Implement</a></li>
-		<li role="presentation"><a href="#"><i class="icon fa fa-cloud"></i> <span class="visible-lg-inline">Phase </span>4: Handover</a></li>
-		<li role="presentation"><a href="#"><i class="icon fa fa-comments"></i> Oracle EMEA Partner Sales Community</a></li>
-		<li role="presentation"><a href="#" class="toggle-menu"><i class="icon fa fa-ellipsis-v"></i></a></li>
+		<li role="presentation"><a href="#"><i class="icon fa fa-home"></i> <span class="hidden-xs-inline">Home</span></a></li>
+		<li role="presentation" class="@@nav-phase01"><a href="page-phase1.html"><i class="icon fa fa-cloud"></i> <span class="visible-lg-inline">Phase </span>1<span class="hidden-xs-inline">: Activate</span></a></li>
+		<li role="presentation" class="@@nav-phase02"><a href="page-phase2.html"><i class="icon fa fa-cloud"></i> <span class="visible-lg-inline">Phase </span>2<span class="hidden-xs-inline">: Enable</span></a></li>
+		<li role="presentation" class="@@nav-phase03"><a href="page-phase3.html"><i class="icon fa fa-cloud"></i> <span class="visible-lg-inline">Phase </span>3<span class="hidden-xs-inline">: Implement</span></a></li>
+		<li role="presentation" class="@@nav-phase04"><a href="page-phase4.html"><i class="icon fa fa-cloud"></i> <span class="visible-lg-inline">Phase </span>4<span class="hidden-xs-inline">: Handover</span></a></li>
+		<li role="presentation"><a href="#"><i class="icon fa fa-comments"></i> <span class="hidden-xs-inline">Oracle EMEA Partner Sales Community</span></a></li>
+		<!-- <li role="presentation"><a href="#" class="toggle-menu"><i class="icon fa fa-ellipsis-v"></i></a></li> -->
 	</ul>
 </nav>
