--- a/src/modules/_page-nav.html
+++ b/src/modules/_page-nav.html
@@ -1,20 +1,20 @@
 <nav class="page-nav">
 	<ul class="page-navigation list-inline ">
-		<li class="previous disabled col-sm-6">
-			<a href="#">
+		<li class="previous @@page-prev-disabled col-sm-6">
+			<a href="#" class="@@page-prev-class">
 				<span class="previous-text"><i class="icon fa fa-arrow-circle-left"></i> Previous</span>
 				<div class="page-previous">
-					<div class="page-number pull-left">02</div>
-					<div class="page-name pull-left">Attend Cloud Onboarding Session</div>
+					<div class="page-number pull-left">@@page-prev-number</div>
+					<div class="page-name pull-left">@@page-prev-title</div>
 				</div>
 			</a>
 		</li>
-		<li class="next text-right col-sm-6">
-			<a href="#">
+		<li class="next @@page-next-disabled text-right col-sm-6">
+			<a href="#" class="@@page-next-class">
 				<span class="next-text">Next <i class="icon fa fa-arrow-circle-right"></i></span>
 				<div class="page-next">
-					<div class="page-number pull-right">04</div>
-					<div class="page-name pull-right">Decide FSO/Packaged Solutions Model And Target Function</div>
+					<div class="page-number pull-right">@@page-next-number</div>
+					<div class="page-name pull-right">@@page-next-title</div>
 				</div>
 			</a>
 		</li>
