--- a/src/page-phase2.tpl.html
+++ b/src/page-phase2.tpl.html
@@ -4,8 +4,22 @@
 		<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 	<![endif]-->
 
-	@@include('modules/_nav-tabs.html')
-	@@include('modules/_nav.html')
+	@@include('modules/_nav-tabs.html', {
+		"nav-phase01": "",
+		"nav-phase02": "active",
+		"nav-phase03": "",
+		"nav-phase04": ""
+	})
+	@@include('modules/_nav.html', {
+		"nav-phase01": "",
+		"nav-phase01-collapsed": "",
+		"nav-phase02": "active",
+		"nav-phase02-collapsed": "in",
+		"nav-phase03": "",
+		"nav-phase03-collapsed": "",
+		"nav-phase04": "",
+		"nav-phase04-collapsed": ""
+	})
 
 	<div class="content">
 
@@ -27,21 +41,73 @@
 				<p class="lead section-title">Enable phase steps</p>
 			</header>
 
-			<div class="phase-plan">
+			<div class="phase-plans row">
 
-				<h4 class="phase-steps-title">Saas digital community activate phase</h4>
-				<ul class="phase-steps list-unstyled">
-					<li><a href="#">01. Kick Off Planning Session</a></li>
-					<li><a href="#">02. Attend Cloud Onboarding Session</a></li>
-					<li><a href="#">03. Finalize Business Plan</a></li>
-					<li><a href="#">04. Decide FSO/Packaged Solutions Model And Target Function</a></li>
-					<li><a href="#">05. Finalize Team Structure And Assign Roles &amp; Resp.</a></li>
-					<li><a href="#">06. Finalize Training Plan</a></li>
-					<li><a href="#">07. Conduct Activate Readiness Checkpoint Review</a></li>
-				</ul>
-				
+				<div class="phase-plan col-md-12 col-lg-12">
+					<h4 class="phase-steps-title">Execute training plan</h4>
+					<ul class="phase-steps list-unstyled">
+						<li>07. Register For Implementation Workshops</li>
+						<li>08. Attend Online Recordings</li>
+						<li>09. Attend Workshops and Bootcamps</li>
+						<li>10. Request Access to Demo Platform</li>
+						<li>11. Cloud Consulting Workshop</li>
+						<li>12. Cloud Methodology Workshop</li>
+						<li>13. SaaS Impl.Best Practices</li>
+					</ul>
+				</div>
+				<!-- /.phase-plan -->
+
+				<div class="phase-plan phase-review col-md-4 col-lg-2 hidden">
+					<h4 class="phase-steps-title">Review</h4>
+					<ul class="phase-steps list-unstyled">
+						<li><a href="#">15. Enablement Readiness Review</a></li>
+					</ul>
+				</div>
+				<!-- /.phase-plan -->
+
 			</div>
-			<!-- /.phase-plan -->
+			<!-- /.phase-plans -->
+
+			<div class="phase-plans row">
+
+				<div class="phase-plan col-md-6 col-lg-6 col-xl-5">
+					<h4 class="phase-steps-title">Saas Implementation best practices</h4>
+					<ul class="phase-steps list-unstyled">
+						<li>16. Oracle Cloud Implementation Success & Training On Demand</li>
+						<li>17. Oracle Cloud Implementation Success & My Oracle Support</li>
+						<li>18. Oracle Cloud Implementation Success & Useful Sites</li>
+					</ul>
+				</div>
+				<!-- /.phase-plan -->
+
+				<div class="phase-plan col-md-6 col-lg-6 col-xl-5">
+					<h4 class="phase-steps-title">Packaged solutions/FSO Build</h4>
+					<ul class="phase-steps list-unstyled">
+						<li>19. Build a first version of Packaged Solution / FSO</li>
+						<li>20. Review and update the Packaged Solution / FSO</li>
+						<li>21. Agree on a final version of Packaged Solution / FSO</li>
+					</ul>
+				</div>
+				<!-- /.phase-plan -->
+
+				<div class="phase-plan phase-review col-md-4 col-lg-2 col-xl-2">
+					<h4 class="phase-steps-title">Exams</h4>
+					<ul class="phase-steps list-unstyled">
+						<li>22. Sit Implementation Exams</li>
+					</ul>
+				</div>
+				<!-- /.phase-plan -->
+
+				<div class="phase-plan phase-review col-md-4 col-lg-2 col-xl-2 hidden">
+					<h4 class="phase-steps-title">Review</h4>
+					<ul class="phase-steps list-unstyled">
+						<li><a href="#">23. Delivery Readiness Review</a></li>
+					</ul>
+				</div>
+				<!-- /.phase-plan -->
+
+			</div>
+			<!-- /.phase-plans -->
 
 		</section>
 		<!-- /.page-content -->
@@ -54,7 +120,7 @@
 			</header>
 
 			<ul class="coaches list-unstyled row">
-				<li class="coach col-sm-4">
+				<li class="coach col-md-4">
 					<a href="#">
 						<img src="https://community.oracle.com/resources/statics/5954567/Untitled-1_0012_Kate%2BLynskey.jpg?a=1476373925549" alt="Corry Weick" class="coach-img">
 						<div class="coach-info">
@@ -63,7 +129,7 @@
 						</div>
 					</a>
 				</li>
-				<li class="coach col-sm-4">
+				<li class="coach col-md-4">
 					<a href="#">
 						<img src="https://community.oracle.com/resources/statics/6070439/Deborah.jpg?a=1476728659523" alt="Corry Weick" class="coach-img">
 						<div class="coach-info">
@@ -72,7 +138,7 @@
 						</div>
 					</a>
 				</li>
-				<li class="coach col-sm-4">
+				<li class="coach col-md-4">
 					<a href="#">
 						<img src="https://community.oracle.com/resources/statics/5954567/HENRY-Legg.jpg?a=1476882373870" alt="Corry Weick" class="coach-img">
 						<div class="coach-info">
