Schedule izmjene layouta

--- a/src/modules/phase02-enable/08/_table.html
+++ b/src/modules/phase02-enable/08/_table.html
@@ -1,6 +1,6 @@
 <div class="table-responsive">
 	
-<table class="table table-hover">
+<table class="table table-hover table-width">
 	<thead>
 		<tr>
 			<th><span class="table-step-number">01</span>Product Pillar</th>
@@ -22,7 +22,6 @@
 			<th><span class="table-step-number">17</span>Are you new to Sandboxes on GSE?</th>
 		</tr>
 	</thead>
-
 
 	<tbody>
 		<tr>
@@ -53,7 +52,6 @@
 			<td>&nbsp;</td>
 			<td>&nbsp;</td>
 			<td>&nbsp;</td>
-			<td><a class="available" target="_blank" href="https://competencycenter.oracle.com/opncc/full_glp.cc?group_id=32394">Available</a></td>
 			<td>&nbsp;</td>
 			<td>&nbsp;</td>
 			<td>&nbsp;</td>
@@ -61,7 +59,8 @@
 			<td>&nbsp;</td>
 			<td>&nbsp;</td>
 			<td>&nbsp;</td>
-			<td><a class="available" target="_blank" href="https://demos.oracle.com/">Available</a></td>
+			<td>&nbsp;</td>
+			<td>&nbsp;</td>
 		</tr>
 
 		<tr>
@@ -99,7 +98,7 @@
 			<td>&nbsp;</td>
 			<td>&nbsp;</td>
 			<td>&nbsp;</td>
-			<td><a class="available" target="_blank" href="https://demos.oracle.com/">Available</a></td>
+			<td>&nbsp;</td>
 		</tr>
 
 		<tr>
@@ -140,7 +139,7 @@
 			<td><a class="available" target="_blank" href="https://demos.oracle.com/">Available</a></td>
 		</tr>
 
-		<tr class="todo">
+		<tr>
 			<td>CX</td>
 			<td>Incentive Compensation</td>
 			<td><a target="_blank" href="http://www.oracle.com/partners/en/products/applications/sales-crm-cloud/overview/index.html">Knowledge Zone</a></td>
@@ -156,7 +155,7 @@
 			<td>&nbsp;</td>
 			<td>&nbsp;</td>
 			<td>&nbsp;</td>
-			<td><a class="available" target="_blank" href="https://demos.oracle.com/">Available</a></td>
+			<td>&nbsp;</td>
 		</tr>
 
 		<tr>
@@ -186,7 +185,6 @@
 			<td><a class="available" target="_blank" href="http://www.oracle.com/partners/en/products/cloud-solutions/maxymiser-testing-optimization/get-trained/index.html">Available</a></td>
 			<td>&nbsp;</td>
 			<td>&nbsp;</td>
-			<td><a class="available" target="_blank" href="https://competencycenter.oracle.com/opncc/full_glp.cc?group_id=32394">Available</a></td>
 			<td>&nbsp;</td>
 			<td>&nbsp;</td>
 			<td>&nbsp;</td>
@@ -194,7 +192,8 @@
 			<td>&nbsp;</td>
 			<td>&nbsp;</td>
 			<td>&nbsp;</td>
-			<td><a class="available" target="_blank" href="https://demos.oracle.com/">Available</a></td>
+			<td>&nbsp;</td>
+			<td>&nbsp;</td>
 		</tr>
 
 		<tr>
