--- a/src/page-phase1-step02.tpl.html
+++ b/src/page-phase1-step02.tpl.html
@@ -51,10 +51,12 @@
 		<!-- /.page-content -->
 
 		@@include('modules/_page-nav.html', {
+			"page-prev-url": "",
 			"page-prev-disabled": "disabled",
 			"page-prev-class": "step01",
 			"page-prev-number": "01",
 			"page-prev-title": "Kick Off Planning Session",
+			"page-next-url": "page-phase1-step03.html",
 			"page-next-disabled": "",
 			"page-next-class": "step03",
 			"page-next-number": "03",
