--- a/src/page-phase1-step04.tpl.html
+++ b/src/page-phase1-step04.tpl.html
@@ -52,10 +52,12 @@
 		<!-- /.page-content -->
 
 		@@include('modules/_page-nav.html', {
+			"page-prev-url": "page-phase1-step03.html",
 			"page-prev-disabled": "",
 			"page-prev-class": "step03",
 			"page-prev-number": "03",
 			"page-prev-title": "Finalize Business Plan",
+			"page-next-url": "page-phase1-step05.html",
 			"page-next-disabled": "",
 			"page-next-class": "step05",
 			"page-next-number": "05",
