--- a/src/page-phase1-step05.tpl.html
+++ b/src/page-phase1-step05.tpl.html
@@ -54,10 +54,12 @@
 		<!-- /.page-content -->
 
 		@@include('modules/_page-nav.html', {
+			"page-prev-url": "page-phase1-step04.html",
 			"page-prev-disabled": "",
 			"page-prev-class": "step04",
 			"page-prev-number": "04",
 			"page-prev-title": "Decide FSO / Packaged Solutions Model and Target Function",
+			"page-next-url": "page-phase1-step06.html",
 			"page-next-disabled": "",
 			"page-next-class": "step06",
 			"page-next-number": "06",
