--- a/src/page-phase1-step06.tpl.html
+++ b/src/page-phase1-step06.tpl.html
@@ -54,14 +54,16 @@
 		<!-- /.page-content -->
 
 		@@include('modules/_page-nav.html', {
+			"page-prev-url": "page-phase1-step05.html",
 			"page-prev-disabled": "",
 			"page-prev-class": "step05",
 			"page-prev-number": "05",
 			"page-prev-title": "Finalize Team Structure and Assign Roles & Responsibilities",
-			"page-next-disabled": "disabled",
+			"page-next-url": "page-phase2-step07.html",
+			"page-next-disabled": "",
 			"page-next-class": "step07",
 			"page-next-number": "07",
-			"page-next-title": "Conduct Activate Readiness Checkpoint Review"
+			"page-next-title": "Register for Implementation Enablement Events"
 		})
 		
 	</div>
