--- a/src/page-phase2-step08.tpl.html
+++ b/src/page-phase2-step08.tpl.html
@@ -37,7 +37,10 @@
 
 	<div class="content" id="08-attend-online-recordings">
 		<header class="page-header">
-			<h2 class="page-title">Attend Online Recordings for Sales, Presales &amp; Implementation</h2>
+			<h2 class="page-title">
+				<span class="title-step-number">08.</span>
+				Attend Online Recordings for Sales, Presales &amp; Implementation
+			</h2>
 		</header>
 
 		<section class="page-intro">
@@ -56,14 +59,16 @@
 		<!-- /.page-content -->
 
 		@@include('modules/_page-nav.html', {
+			"page-prev-url": "page-phase2-step07.html",
 			"page-prev-disabled": "",
-			"page-prev-class": "step02",
-			"page-prev-number": "02",
-			"page-prev-title": "Attend Cloud Onboarding Session",
+			"page-prev-class": "step07",
+			"page-prev-number": "07",
+			"page-prev-title": "Register for Implementation Enablement Events",
+			"page-next-url": "page-phase2-step09.html",
 			"page-next-disabled": "",
-			"page-next-class": "step04",
-			"page-next-number": "04",
-			"page-next-title": "Decide FSO/Packaged Solutions Model And Target Function"
+			"page-next-class": "step09",
+			"page-next-number": "09",
+			"page-next-title": "Attend Workshops and Bootcamps"
 		})
 		
 	</div>
