--- a/src/modules/phase02-enable/07/_table.html
+++ b/src/modules/phase02-enable/07/_table.html
@@ -1,6 +1,6 @@
 <div class="table-responsive">
 	
-	<table class="table table-hover">
+	<table class="table table-hover table-width">
 		<thead>
 			<tr>
 				<th width="130"><span class="table-step-number">01</span> Product Pillar</th>
