--- a/src/page-phase1-step03.tpl.html
+++ b/src/page-phase1-step03.tpl.html
@@ -62,10 +62,12 @@
 		<!-- /.page-content -->
 
 		@@include('modules/_page-nav.html', {
+			"page-prev-url": "page-phase1-step02.html",
 			"page-prev-disabled": "",
 			"page-prev-class": "step02",
 			"page-prev-number": "02",
 			"page-prev-title": "Attend Cloud Onboarding Session",
+			"page-next-url": "page-phase1-step04.html",
 			"page-next-disabled": "",
 			"page-next-class": "step04",
 			"page-next-number": "04",
