--- a/src/page-phase2-step07.tpl.html
+++ b/src/page-phase2-step07.tpl.html
@@ -67,10 +67,12 @@
 		<!-- /.page-content -->
 
 		@@include('modules/_page-nav.html', {
-			"page-prev-disabled": "disabled",
+			"page-prev-url": "page-phase1-step06.html",
+			"page-prev-disabled": "",
 			"page-prev-class": "step06",
 			"page-prev-number": "06",
 			"page-prev-title": "Finalize Training Plan",
+			"page-next-url": "page-phase2-step08.html",
 			"page-next-disabled": "",
 			"page-next-class": "step08",
 			"page-next-number": "08",
